// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildState BuildState.Regular renders correctly for build state \`BLOCKED\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#90c73e"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#90c73e"
    strokeWidth={2}
  >
    <path
      d="M13,21V11"
    />
    <path
      d="M19,21V11"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`CANCELED\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#F83F23"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#F83F23"
    strokeWidth={2}
    transform="translate(10.000000, 10.000000)"
  >
    <path
      d="M0.600275489,0.600275489 L11.3997245,11.3997245"
    />
    <path
      d="M11.3997245,0.600275489 L0.600275489,11.3997245"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`FAILED\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#F83F23"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#F83F23"
    strokeWidth={2}
    transform="translate(10.000000, 10.000000)"
  >
    <path
      d="M0.600275489,0.600275489 L11.3997245,11.3997245"
    />
    <path
      d="M11.3997245,0.600275489 L0.600275489,11.3997245"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`NOT_RUN\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#83B0E4"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#83B0E4"
    strokeWidth={2}
  />
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`PASSED\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#90c73e"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <polyline
    fill="none"
    points="10 17.61 14.38 20.81 21 11.41"
    stroke="#90c73e"
    strokeMiterlimit="10"
    strokeWidth={2}
  />
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`RUNNING\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#fdba12"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
    <mask
      height="14"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask"
      maskUnits="userSpaceOnUse"
      width="14"
      x="9"
      y="9"
    >
      <polygon
        className="animation-spin"
        fill="#fff"
        points="16 16 9 16 9 9 16 9 16 16 23 16 23 23 16 23 16 16"
        style={
          Object {
            "transformOrigin": "center",
          }
        }
      />
    </mask>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    mask="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask)"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="6"
      stroke="#fdba12"
      strokeWidth={2}
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`SCHEDULED\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#bbbbbb"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
    <mask
      height="14"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask"
      maskUnits="userSpaceOnUse"
      width="14"
      x="9"
      y="9"
    >
      <polygon
        className="animation-spin"
        fill="#fff"
        points="16 16 9 16 9 9 16 9 16 16 23 16 23 23 16 23 16 16"
        style={
          Object {
            "transformOrigin": "center",
          }
        }
      />
    </mask>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    mask="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask)"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="6"
      stroke="#bbbbbb"
      strokeWidth={2}
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`SKIPPED\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#83B0E4"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#83B0E4"
    strokeWidth={2}
  />
</svg>
`;

exports[`BuildState BuildState.Regular renders correctly for build state \`null\` 1`] = `
<svg
  className={undefined}
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#cdcccc"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#cdcccc"
    strokeWidth={2}
  />
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`BLOCKED\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#90c73e"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#90c73e"
    strokeWidth={3}
  >
    <path
      d="M13,21V11"
    />
    <path
      d="M19,21V11"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`CANCELED\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#F83F23"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#F83F23"
    strokeWidth={3}
    transform="translate(10.000000, 10.000000)"
  >
    <path
      d="M0.600275489,0.600275489 L11.3997245,11.3997245"
    />
    <path
      d="M11.3997245,0.600275489 L0.600275489,11.3997245"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`FAILED\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#F83F23"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#F83F23"
    strokeWidth={3}
    transform="translate(10.000000, 10.000000)"
  >
    <path
      d="M0.600275489,0.600275489 L11.3997245,11.3997245"
    />
    <path
      d="M11.3997245,0.600275489 L0.600275489,11.3997245"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`NOT_RUN\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#83B0E4"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#83B0E4"
    strokeWidth={3}
  />
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`PASSED\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#90c73e"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <polyline
    fill="none"
    points="10 17.61 14.38 20.81 21 11.41"
    stroke="#90c73e"
    strokeMiterlimit="10"
    strokeWidth={3}
  />
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`RUNNING\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#fdba12"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
    <mask
      height="14"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask"
      maskUnits="userSpaceOnUse"
      width="14"
      x="9"
      y="9"
    >
      <polygon
        className="animation-spin"
        fill="#fff"
        points="16 16 9 16 9 9 16 9 16 16 23 16 23 23 16 23 16 16"
        style={
          Object {
            "transformOrigin": "center",
          }
        }
      />
    </mask>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    mask="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask)"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="6"
      stroke="#fdba12"
      strokeWidth={3}
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`SCHEDULED\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#bbbbbb"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
    <mask
      height="14"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask"
      maskUnits="userSpaceOnUse"
      width="14"
      x="9"
      y="9"
    >
      <polygon
        className="animation-spin"
        fill="#fff"
        points="16 16 9 16 9 9 16 9 16 16 23 16 23 23 16 23 16 16"
        style={
          Object {
            "transformOrigin": "center",
          }
        }
      />
    </mask>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    mask="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask)"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="6"
      stroke="#bbbbbb"
      strokeWidth={3}
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`SKIPPED\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#83B0E4"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#83B0E4"
    strokeWidth={3}
  />
</svg>
`;

exports[`BuildState BuildState.Small renders correctly for build state \`null\` 1`] = `
<svg
  className={undefined}
  height={20}
  style={undefined}
  viewBox="0 0 32 32"
  width={20}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#cdcccc"
      strokeWidth={6}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#cdcccc"
    strokeWidth={3}
  />
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`BLOCKED\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#90c73e"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#90c73e"
    strokeWidth={4}
  >
    <path
      d="M13,21V11"
    />
    <path
      d="M19,21V11"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`CANCELED\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#F83F23"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#F83F23"
    strokeWidth={4}
    transform="translate(10.000000, 10.000000)"
  >
    <path
      d="M0.600275489,0.600275489 L11.3997245,11.3997245"
    />
    <path
      d="M11.3997245,0.600275489 L0.600275489,11.3997245"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`FAILED\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#F83F23"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    fill="none"
    stroke="#F83F23"
    strokeWidth={4}
    transform="translate(10.000000, 10.000000)"
  >
    <path
      d="M0.600275489,0.600275489 L11.3997245,11.3997245"
    />
    <path
      d="M11.3997245,0.600275489 L0.600275489,11.3997245"
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`NOT_RUN\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#83B0E4"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#83B0E4"
    strokeWidth={4}
  />
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`PASSED\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#90c73e"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <polyline
    fill="none"
    points="10 17.61 14.38 20.81 21 11.41"
    stroke="#90c73e"
    strokeMiterlimit="10"
    strokeWidth={4}
  />
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`RUNNING\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#fdba12"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
    <mask
      height="14"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask"
      maskUnits="userSpaceOnUse"
      width="14"
      x="9"
      y="9"
    >
      <polygon
        className="animation-spin"
        fill="#fff"
        points="16 16 9 16 9 9 16 9 16 16 23 16 23 23 16 23 16 16"
        style={
          Object {
            "transformOrigin": "center",
          }
        }
      />
    </mask>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    mask="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask)"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="6"
      stroke="#fdba12"
      strokeWidth={4}
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`SCHEDULED\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#bbbbbb"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
    <mask
      height="14"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask"
      maskUnits="userSpaceOnUse"
      width="14"
      x="9"
      y="9"
    >
      <polygon
        className="animation-spin"
        fill="#fff"
        points="16 16 9 16 9 9 16 9 16 16 23 16 23 23 16 23 16 16"
        style={
          Object {
            "transformOrigin": "center",
          }
        }
      />
    </mask>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <g
    mask="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_mask)"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="6"
      stroke="#bbbbbb"
      strokeWidth={4}
    />
  </g>
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`SKIPPED\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#83B0E4"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#83B0E4"
    strokeWidth={4}
  />
</svg>
`;

exports[`BuildState BuildState.XSmall renders correctly for build state \`null\` 1`] = `
<svg
  className={undefined}
  height={13}
  style={undefined}
  viewBox="0 0 32 32"
  width={13}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#cdcccc"
      strokeWidth={8}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#cdcccc"
    strokeWidth={4}
  />
</svg>
`;

exports[`BuildState passes through className 1`] = `
<svg
  className="some-weird-class-name"
  height={32}
  style={undefined}
  viewBox="0 0 32 32"
  width={32}
>
  <defs>
    <circle
      cx="16"
      cy="16"
      fill="none"
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      r="15"
      stroke="#cdcccc"
      strokeWidth={4}
    />
    <clipPath
      id="BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath"
    >
      <use
        xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
      />
    </clipPath>
  </defs>
  <use
    clipPath="url(#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_strokeClipPath)"
    xlinkHref="#BuildState_NORMALLY-UUID-GOES-HERE-BUTNEVERMIND_circle"
  />
  <path
    d="M11,16H21"
    fill="none"
    stroke="#cdcccc"
    strokeWidth={2}
  />
</svg>
`;

exports[`BuildState stateless Components are accessible 1`] = `
Array [
  "Regular",
  "Small",
  "XSmall",
]
`;
